...

@implementation ViewController

- (void)viewDidLoad {
    [super viewDidLoad];
    
    NSArray *titleArray = @[@"使用Frame布局", @"使用AutoLayout", @"UIStackView布局", @"嵌套UIStackView布局", @"ViewControllerScrollStackView"];
    for (NSInteger i = 0; i < titleArray.count; ++i) {
        NSString *title = titleArray[i];
        UIButton *btn = [self createButtonWithTitle:title andTag:i];
        [self.stackView addArrangedSubview:btn];
        //隐藏view
        if (i == 1 || i == 3) {
...
    switch (sender.tag) {
        case 0:
            vc = [NSClassFromString(@"ViewControllerFrame") new];
            vc.navigationItem.title = @"ViewControllerFrame";
            break;
        case 1:
            vc = [NSClassFromString(@"ViewControllerAutoLayout") new];
            vc.navigationItem.title = @"ViewControllerAutoLayout";
            break;
        case 2:
            vc = [NSClassFromString(@"ViewControllerUIStackView") new];
            vc.navigationItem.title = @"ViewControllerUIStackView";
            break;
...
